# mb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
public/theme/: default.css
src/: config.rs  db.rs  feed.rs  main.rs
src/feed/: link.rs
templates/: index.html.tera  layout.html.tera  post.html.tera
