[package]
name = "mb"
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Simple, js-less micro-blogging platform written in Rust"
keywords = ["micro-blog", "redb", "rocket", "web", "js-less"]
categories = ["network-programming"]
repository = "https://github.com/yggverse/mb"
# homepage = "https://yggverse.github.io"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
redb = "3.0"
regex = "1.11"
rocket = "0.5"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
url = { version = "2.5", features = ["serde"] }
